2011-12-20  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt][WK2] Remove statusBarMessageChanged
        https://bugs.webkit.org/show_bug.cgi?id=74405

        Reviewed by Tor Arne Vestbø.

        Removing support for window.status updates from the public
        QML API. See bug for details.

        * UIProcess/API/qt/qquickwebview_p.h:
        * UIProcess/qt/QtWebPageUIClient.cpp:
        (QtWebPageUIClient::QtWebPageUIClient):
        * UIProcess/qt/QtWebPageUIClient.h:

2011-12-20  Anders Carlsson  <andersca@apple.com>

        Add ScrollableArea wrappers for a bunch of ScrollAnimator member functions
        https://bugs.webkit.org/show_bug.cgi?id=74951

        Reviewed by Sam Weinig.

        * WebProcess/Plugins/PDF/BuiltInPDFView.cpp:
        (WebKit::BuiltInPDFView::paint):
        (WebKit::BuiltInPDFView::handleMouseEvent):
        (WebKit::BuiltInPDFView::handleMouseEnterEvent):
        (WebKit::BuiltInPDFView::handleMouseLeaveEvent):

2011-12-20  Brent Fulgham  <bfulgham@webkit.org>

        [WinCairo] Unreviewed build fix.

        * win/WebKit2CFLite.def: Add missing export declaration.

2011-12-20  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Build fix for gcc used on WK2 build bot.

        * UIProcess/qt/QtWebPagePolicyClient.cpp:
        (QtWebPagePolicyClient::decidePolicyForNavigationAction): Don't do case:
        with values outside the range of the type. Instead switch() on the int instead.

2011-12-20  Rafael Brandao  <rafael.lobo@openbossa.org>

        [Qt] Extend QQuickWebview::navigationRequested API
        https://bugs.webkit.org/show_bug.cgi?id=73818

        Reviewed by Simon Hausmann.

        Added url of the originating frame on QWebNavigationRequest,
        accessible via 'request.originatingUrl' on QML. Download action
        was moved to experimental, so in order to use it you should set
        'request.action = WebViewExperimental.DownloadRequest' on QML.

        * UIProcess/API/qt/qquickwebview_p.h: