@@ -325,10 +325,10 @@ void WebPopupMenuProxyWin::showPopupMenu(const IntRect& rect, TextDirection, dou
     m_showPopup = false;
     ::ShowWindow(m_popup, SW_HIDE);
 
-    if (!m_client)
+    if (!WebPropupMenuProxy::m_client)
         return;
 
-    m_client->valueChangedForPopupMenu(this, m_newSelectedIndex);
+    WebPropupMenuProxy::m_client->valueChangedForPopupMenu(this, m_newSelectedIndex);
 
     // <https://bugs.webkit.org/show_bug.cgi?id=57904> In order to properly call the onClick()
     // handler on a <select> element, we need to fake a mouse up event in the main window.
@@ -338,10 +338,10 @@ void WebPopupMenuProxyWin::showPopupMenu(const IntRect& rect, TextDirection, dou
     // Thus, we are virtually clicking at the
     // same location where the mouse down event occurred. This allows the hit test to select
     // the correct element, and thereby call the onClick() JS handler.
-    if (!m_client->currentlyProcessedMouseDownEvent())
+    if (!WebPropupMenuProxy::m_client->currentlyProcessedMouseDownEvent())
         return;
         
-    const MSG* initiatingWinEvent = m_client->currentlyProcessedMouseDownEvent()->nativeEvent();
+    const MSG* initiatingWinEvent = WebPropupMenuProxy::m_client->currentlyProcessedMouseDownEvent()->nativeEvent();
     MSG fakeEvent = *initiatingWinEvent;
     fakeEvent.message = WM_LBUTTONUP;
     ::PostMessage(fakeEvent.hwnd, fakeEvent.message, fakeEvent.wParam, fakeEvent.lParam);
@@ -870,8 +870,8 @@ bool WebPopupMenuProxyWin::setFocusedIndex(int i, bool hotTracking)
     m_focusedIndex = i;
 
     if (!hotTracking) {
-        if (m_client)
-            m_client->setTextFromItemForPopupMenu(this, i);
+        if (WebPropupMenuProxy::m_client)
+            WebPropupMenuProxy::m_client->setTextFromItemForPopupMenu(this, i);
     }
 
     if (!scrollToRevealSelection())
